Added logo and margins

--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>Karma</title>
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
 </head>
 <body>
-Test
+	<nav class="top navigation">
+		<div class="content"><img src="images/karma-logo copy.svg" alt="Logo Image" width="26" style="margin-left: 14px; height: 70px;"></div>
+	</nav>
+
 </body>
 </html>
