--- a/index.html
+++ b/index.html
@@ -4,12 +4,69 @@
 	<meta charset="UTF-8">
 	<title>Karma</title>
 	<link rel="stylesheet" href="css/style.css">
+	<link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
 	<link rel="shortcut icon" type="image/x-icon" href="images/favicon.ico">
+	<!-- <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet"> -->
+	<link href="css/font-awesome.min.css" rel="stylesheet">
 </head>
+
 <body>
-	<nav class="top navigation">
-		<div class="content"><img src="images/karma-logo copy.svg" alt="Logo Image" width="26" style="margin-left: 14px; height: 70px;"></div>
-	</nav>
+<div id="navigation">
+	<img id="logo" src="images/karma-logo copy.svg" alt="Logo Image">
+		<nav id="top-navigation">
+			<li class="item active">Meet Karma</li>
+			<li class="item">How It Works</li>
+			<li class="item">Store</li>
+			<li class="item">Blog</li>
+			<li class="item">Help</li>
+			<li class="item">Login</li>
+		</nav>
+</div>
+	<div id="hero">
+		<div id="introduction">
+			<h1>Introducing Karma</h1>
+			<h3>Bring WiFi with you, everywhere you go.</h3>
+			<button id="btn">Learn More</button>
+		</div>
+	</div>
+	<div class="cases">	
+		<h2>Everyone needs a little Karma.</h2>
+				<div class="devices"><img width="127px" height="127px" src="images/icon-devices copy.svg" alt="Internet for all devices image">
+					<h3>Internet for all devices</h3>
+				</div>	
+				<div class="devices"><img width="127px" height="127px" src="images/icon-coffee copy.svg" alt="Boost your productivity image">
+					<h3>Boost your productivity</h3>
+				</div>
+				<div class="devices"><img width="127px" height="127px" src="images/icon-refill copy.svg" alt="Pay as You Go image">
+					<h3>Pay as You Go</h3>
+				</div>
+		</ul>
+	</div>
+<footer class="social">
+	<div class="footer-content">
+		<hr>
+		<h5>Join us on</h5>
+		<ul class="icons">
+			<p>
+			<li class="twitter">
+				<i class="fa fa-twitter">
+				</i>
+			</li>
+			<li class="facebook">
+				<i class="fa fa-facebook">
+				</i>
+			</li>
+			<li class="instagram">
+				<i class="fa fa-instagram">
+				</i>
+			</li>
+			</p>
+		</ul>
+		<span id="copy">
+			© Karma Mobility, Inc.
+		</span>
+	</div>
+</footer>
 
 </body>
 </html>
